--- a/src/components/mimos/styles.module.scss
+++ b/src/components/mimos/styles.module.scss
@@ -37,7 +37,7 @@
     img {
       width: 100%;
       height: 100%;
-      margin-bottom: -10px;
+      margin-bottom: -5px;
     }
   }
 }
@@ -48,6 +48,19 @@
       margin-top: 60px;
       .title {
         padding-left: 0px;
+      }
+    }
+  }
+}
+@media (max-width: 380px) {
+  .container {
+    .heading {
+      .heart {
+        width: 40px;
+        height: 40px;
+      }
+      .title {
+        font-size: 40px;
       }
     }
   }
